--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
 
         <aside class="profile-card">
-          <img src="https://github.com/uxername666/Kylponio.com/blob/main/its%20me.jpg" Alt="Profile Picture">
+          <img src="its me.jpg" Alt="Profile Picture">
           <div class="profile-info">
             <h3>Kyl Ponio</h3>
             <p>UI/UX & Frontend engineer building modern web apps with attention to detail.</p>
@@ -213,4 +213,5 @@
   </script>
 </body>
 </html>
+
 
