--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <img src="its me.jpg" Alt="Profile Picture">
           <div class="profile-info">
             <h3>Kyl Ponio</h3>
-            <p>“I’m a Full-Stack Developer who specializes in building modern, responsive, and scalable web applications. With expertise in both front-end and back-end development, I create seamless digital experiences that combine clean code, strong performance, and intuitive design.”</p>
+            <p>I’m a Full-Stack Developer who specializes in building modern, responsive, and scalable web applications. With expertise in both front-end and back-end development, I create seamless digital experiences that combine clean code, strong performance, and intuitive design.</p>
           </div>
         </aside>
       </section>
@@ -213,6 +213,7 @@
   </script>
 </body>
 </html>
+
 
 
 
